--- a/ToDos/ToDo/data/templates/data/data_form.html
+++ b/ToDos/ToDo/data/templates/data/data_form.html
@@ -2,16 +2,16 @@
 
 
 {% block title %}
-    {% if form.instance.pk %}Edit Post{% else %}Create Post{% endif %}
+    {% if form.instance.pk %}Edit Task{% else %}Create Task{% endif %}
 {% endblock title %}
 
 {% block content %}
 
     <h2 class="text-4xl text-center text-white font-bold my-6">
         {% if form.instance.pk %}
-        Edit Post
+        Edit Task
         {% else %}
-        Create Post
+        Create Task
         {% endif %}
     </h2>
     <div class="flex items-center justify-center mb-6">
@@ -22,10 +22,10 @@
                 type="submit"
                 class="w-full bg-blue-600 text-white py-3 rounded-xl font-semibold hover:bg-blue-700 transition duration-200"
             >
-                Post
+                Add
             </button>
         </form>
-        <a href="{% url 'tweet_list' %}" class="ml-4 bg-gray-400 text-white px-4 py-2 rounded hover:bg-gray-500">Cancel</a>
+        <a href="" class="ml-4 bg-gray-400 text-white px-4 py-2 rounded hover:bg-gray-500">Cancel</a>
     </div>
 
 
