--- a/ToDos/ToDo/data/templates/data/data_form.html
+++ b/ToDos/ToDo/data/templates/data/data_form.html
@@ -22,10 +22,10 @@
                 type="submit"
                 class="w-full bg-blue-600 text-white py-3 rounded-xl font-semibold hover:bg-blue-700 transition duration-200"
             >
-                Add
+                Commit
             </button>
         </form>
-        <a href="" class="ml-4 bg-gray-400 text-white px-4 py-2 rounded hover:bg-gray-500">Cancel</a>
+        <a href="{% url 'index' %}" class="ml-4 bg-gray-400 text-white px-4 py-2 rounded hover:bg-gray-500">Cancel</a>
     </div>
 
 
