--- a/ToDos/ToDo/data/templates/data/index.html
+++ b/ToDos/ToDo/data/templates/data/index.html
@@ -14,6 +14,15 @@
            <div style="display: flex; align-items: center; margin-bottom: 10px;">
               <h1 style="margin-right: 20px;">{{data.id}}-{{data.title}}-{{data.created_at}}</h1>
               <a href="{% url 'edit' data.id %}" class="bg-yellow-500 text-white px-3 py-1 rounded hover:bg-yellow-600 transition">Edit</a>
+              <form action="{% url 'delete' data.id %}" method="post" style="display:inline;">
+                    {% csrf_token %}
+                    <button
+                        type="submit"
+                        class="bg-red-500 text-white px-3 py-1 rounded hover:bg-red-600 transition">
+                        Delete
+                    </button>
+              </form>
+
            </div>
     {% endfor %}
 {% endblock content %}
